[gd_scene load_steps=23 format=2]

[ext_resource path="res://src/Actors/Enemies/Shared/LongBossDeath.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Effects/Materials/BossSmokeParticlesMedium.tres" type="Material" id=2]
[ext_resource path="res://src/Effects/Materials/BossExplosion.tres" type="Material" id=3]
[ext_resource path="res://src/Actors/Modules/Enemy/DamageOnTouch.gd" type="Script" id=4]
[ext_resource path="res://src/Actors/Bosses/DarkMantis/Idle.gd" type="Script" id=5]
[ext_resource path="res://src/Actors/Panda.gd" type="Script" id=6]
[ext_resource path="res://src/Actors/Modules/Enemy/BossDamage.gd" type="Script" id=7]
[ext_resource path="res://src/Actors/Bosses/BossAI.gd" type="Script" id=9]
[ext_resource path="res://src/Actors/Bosses/SnipeAnteator/AnteatorIntro.gd" type="Script" id=10]
[ext_resource path="res://src/Actors/Bosses/BossStun.gd" type="Script" id=11]
[ext_resource path="res://src/Effects/Materials/default_material.tres" type="Material" id=12]
[ext_resource path="res://src/Sounds/HIT_BOSS.wav" type="AudioStream" id=16]
[ext_resource path="res://src/Actors/Bosses/DarkMantis/mantis.res" type="SpriteFrames" id=17]
[ext_resource path="res://src/Actors/Bosses/SnipeAnteator/AntBomb.gd" type="Script" id=18]
[ext_resource path="res://src/Actors/Bosses/SnipeAnteator/HomingMissile.gd" type="Script" id=19]
[ext_resource path="res://src/Actors/Bosses/SnipeAnteator/SniperShot.gd" type="Script" id=20]
[ext_resource path="res://src/Actors/Bosses/SnipeAnteator/TongueLash.gd" type="Script" id=21]
[ext_resource path="res://src/Actors/Bosses/SnipeAnteator/DarknessCloak.gd" type="Script" id=22]
[ext_resource path="res://src/Actors/Bosses/SnipeAnteator/AntBombProjectile.tscn" type="PackedScene" id=23]
[ext_resource path="res://src/Actors/Bosses/SnipeAnteator/HomingMissileProjectile.tscn" type="PackedScene" id=24]
[ext_resource path="res://src/Actors/Bosses/SnipeAnteator/SniperBulletProjectile.tscn" type="PackedScene" id=25]
[ext_resource path="res://src/Actors/MeleeEnemyAttack.gd" type="Script" id=26]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 30 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18, 20 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 24.0
height = 64.0

[node name="SnipeAnteator" type="KinematicBody2D" groups=["Bosses"]]
z_index = 4
collision_layer = 0
script = ExtResource( 6 )
max_health = 160.0

[node name="BossAI" type="Node2D" parent="."]
script = ExtResource( 9 )
time_between_attacks = Vector2( 0.5, 1.2 )

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 17 )
shape = SubResource( 1 )

[node name="animatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 12 )
z_index = 1
frames = ExtResource( 17 )
animation = "idle"
offset = Vector2( 0, 7 )

[node name="area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="area2D"]
position = Vector2( 0, 15 )
shape = SubResource( 2 )

[node name="visibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -6.5, 3.5 )
scale = Vector2( 4.35, 4.25 )

[node name="Intro" type="Node2D" parent="."]
script = ExtResource( 10 )
actions = [ "Event" ]
animation = "idle"

[node name="Idle" type="Node2D" parent="."]
script = ExtResource( 5 )
conflicting_moves = [ "Anything" ]

[node name="Damage" type="Node2D" parent="."]
script = ExtResource( 7 )
invulnerability_time = 0.1
max_flash_time = 0.35
weakenesses = [ "MovingWheel" ]

[node name="audioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Damage"]
pause_mode = 2
stream = ExtResource( 16 )
volume_db = -3.0
max_distance = 600.0
bus = "SFX"

[node name="DamageOnTouch" type="Node2D" parent="."]
script = ExtResource( 4 )
damage = 6.0

[node name="AntBomb" type="Node2D" parent="."]
script = ExtResource( 18 )
actions = [ "Event" ]
animation = "idle"
ant_bomb_projectile = ExtResource( 23 )

[node name="HomingMissile" type="Node2D" parent="."]
script = ExtResource( 19 )
actions = [ "Event" ]
animation = "idle"
missile_projectile = ExtResource( 24 )

[node name="SniperShot" type="Node2D" parent="."]
script = ExtResource( 20 )
actions = [ "Event" ]
animation = "idle"
bullet_projectile = ExtResource( 25 )

[node name="TongueLash" type="Node2D" parent="."]
script = ExtResource( 21 )
actions = [ "Event" ]
animation = "idle"
horizontal_velocity = 300.0

[node name="GrabArea" type="Node2D" parent="TongueLash"]
visible = false
script = ExtResource( 26 )
active = false
damage = 0.0
owner_character = NodePath("../..")
dont_deal_damage = true

[node name="area2D" type="Area2D" parent="TongueLash/GrabArea"]
collision_layer = 0
collision_mask = 6
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="TongueLash/GrabArea/area2D"]
position = Vector2( 40, 0 )
rotation = 0.375246
shape = SubResource( 3 )

[node name="DarknessCloak" type="Node2D" parent="."]
script = ExtResource( 22 )
actions = [ "Event" ]
animation = "idle"
jump_velocity = 400.0
desperation_attack = true
bullet_projectile = ExtResource( 25 )

[node name="BossDeath" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 0 )
death_animation = "death"
collectible = "anteator_weapon"

[node name="Explosion Particles" parent="BossDeath" index="0"]
amount = 24
process_material = ExtResource( 3 )

[node name="Smoke Particles" parent="BossDeath" index="1"]
process_material = ExtResource( 2 )

[node name="BossStun" type="Node2D" parent="."]
script = ExtResource( 11 )
conflicting_moves = [ "BossDeath" ]
actions = [ "Event" ]
animation = "idle"
horizontal_velocity = 120.0
jump_velocity = 150.0

[connection signal="ability_start" from="DarknessCloak" to="BossStun" method="deactivate"]
[connection signal="ready_for_stun" from="DarknessCloak" to="BossStun" method="reactivate"]

[editable path="BossDeath"]
